# SDFDDGI

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  populate_cmake_src_deps.py
Engine/: CMakeLists.txt
Engine/Resources/Shaders/: RayMarching_incl.glsl  RayMarching_orig.glsl  march_dist.glsl  passthrough.frag  passthrough.vert  sd_incs.glsl  tmp_core.glsl  tmp_inc.glsl
Engine/src/: Core.cpp  Core.h  DebugScene.cpp  DebugScene.h  Definitions.h  Loader.cpp  Loader.h  Material.h  Model.cpp  Model.h  NonCopyable.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  main.cpp
Engine/src/Engine/: Test.cpp  Test.h
Engine/src/Renderer/: ShaderParser.cpp  ShaderParser.h  ShaderProgram.cpp  ShaderProgram.h
Engine/src/Utils/: Logger.h  LoggingUserFormatter.h  OpenGLCallbacks.h  OpenGLWindow.cpp  OpenGLWindow.h
Engine/src/Utils/Context/: OpenGLCallbacks.cpp  OpenGLCallbacks.h  OpenGLWindow.cpp  OpenGLWindow.h
Engine/src/Utils/Files/: FileLoaderFactory.cpp  FileLoaderFactory.h
Engine/src/Utils/Input/: GLFWInputKeyStore.h  InputManager.cpp  InputManager.h
EngineDriver/: CMakeLists.txt
EngineDriver/src/: main.cpp
build_scripts_windows/: build.bat  build_run.bat  clean.bat  run.bat
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: main.cpp
